// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs tabs should match snapshot and display lengths if isLoading prop equal false 1`] = `
<div>
  <div
    class="sc-ckMVTt gayxNr"
  >
    <span
      class="sc-fbPSWO gzrfze"
    >
      pokemons
       
      (10)
    </span>
    <span
      class="sc-fbPSWO erHYoJ"
    >
      moves
       
      (15)
    </span>
    <span
      class="sc-fbPSWO erHYoJ"
    >
      types
       
      (20)
    </span>
  </div>
</div>
`;

exports[`Tabs tabs should match snapshot and should not display lengths if isLoading prop equals true 1`] = `
<div>
  <div
    class="sc-ckMVTt gayxNr"
  >
    <span
      class="sc-fbPSWO gzrfze"
    >
      pokemons
       
    </span>
    <span
      class="sc-fbPSWO erHYoJ"
    >
      moves
       
    </span>
    <span
      class="sc-fbPSWO erHYoJ"
    >
      types
       
    </span>
  </div>
</div>
`;
